--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "property-management",
-  "proxy": "http://localhost:5000",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "cores": "^0.8.5",
     "cors": "^2.8.5",
     "framer-motion": "^11.11.10",
     "react": "^18.3.1",
